--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -46,7 +46,7 @@
    <img 
   src="https://image.tmdb.org/t/p/original/v1gbUeGh0TPfGK5VbqHZ9trVCjt.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">Megamente y El Botón de la Perdición 2011</span>
-    <span class="hidden">Para su primer día en el trabajo como los nuevos protectores de Metro City, Megamente y Cervil están vendiendo los dispositivos de su guarida malvada. Pero cuando un "botón" aparentemente inofensivo desata el gigantesco robot MEGA-MEGAmente, el dúo tendrá que recurrir a sus viejos trucos para restablecer el orden.</span>
+    <span class="hidden">mega-min mega min megamin Megamente Para su primer día en el trabajo como los nuevos protectores de Metro City, Megamente y Cervil están vendiendo los dispositivos de su guarida malvada. Pero cuando un "botón" aparentemente inofensivo desata el gigantesco robot MEGA-MEGAmente, el dúo tendrá que recurrir a sus viejos trucos para restablecer el orden.</span>
   </a>
 </li>
 <!--FIN--><!-- Nezha: Corriendo por la vida -->
@@ -55,7 +55,7 @@
    <img 
   src="https://image.tmdb.org/t/p/original/rDT8vGSQ8uijR97USelHCuVzCpf.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">Nezha: Corriendo por la vida 2021</span>
-    <span class="hidden">El equipo LIONS, que alguna vez fue el dominante, fue disminuyendo gradualmente después de la muerte del líder del equipo, Lao Shen. No dispuestos a retirarse, Li Yi Fei y su nueva compañera, la primera mujer conductora en la historia de la liga, Lu Li li no se llevaban bien, y los dos no se rindieron entre sí, lo que empeoró la situación del equipo.</span>
+    <span class="hidden">ne zha El equipo LIONS, que alguna vez fue el dominante, fue disminuyendo gradualmente después de la muerte del líder del equipo, Lao Shen. No dispuestos a retirarse, Li Yi Fei y su nueva compañera, la primera mujer conductora en la historia de la liga, Lu Li li no se llevaban bien, y los dos no se rindieron entre sí, lo que empeoró la situación del equipo.</span>
   </a>
 </li>
 <!--FIN--><!-- Ne Zha 2: El Renacer del Alma -->
@@ -64,7 +64,7 @@
    <img 
   src="https://image.tmdb.org/t/p/original/rSBlnopTGL6aGpD2gTG1Bfqb2Om.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">Ne Zha 2: El Renacer del Alma 2025</span>
-    <span class="hidden">Después de la catástrofe, aunque las almas de Nezha y Aobing fueron salvadas, sus cuerpos pronto serían destrozados. Taiyi Zhenren planeaba usar el loto de siete colores para reconstruir sus cuerpos.</span>
+    <span class="hidden">nezha Después de la catástrofe, aunque las almas de Nezha y Aobing fueron salvadas, sus cuerpos pronto serían destrozados. Taiyi Zhenren planeaba usar el loto de siete colores para reconstruir sus cuerpos.</span>
   </a>
 </li>
 <!--FIN--><!-- El genio y los deseos -->
@@ -73,7 +73,7 @@
    <img 
   src="https://image.tmdb.org/t/p/original/57lwxja44bDvaOGbLrUfINMe5Vh.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">El genio y los deseos 2025</span>
-    <span class="hidden">Mil años después, un extravagante genio regresa para conceder los deseos de una mujer sin emociones. ¿Logrará él con su magia llenar de amor y asombro el mundo de ella?</span>
+    <span class="hidden">de los Mil años después, un extravagante genio regresa para conceder los deseos de una mujer sin emociones. ¿Logrará él con su magia llenar de amor y asombro el mundo de ella?</span>
   </a>
 </li>
 <!--FIN--><!-- El maravillosamente extrano mundo de Gumball -->
@@ -82,7 +82,7 @@
    <img 
   src="https://image.tmdb.org/t/p/original/zjon4kGt6L6mYu04fKVr0u07Fte.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">El maravillosamente extraño mundo de Gumball 2025</span>
-    <span class="hidden">Bienvenido de nuevo a Elmore, donde las leyes de la realidad son una broma y la vida familiar es todo menos ordinaria. Ya sea luchando contra un imperio de comida rápida malvado, enfrentándose a una IA sensible enamorada de su mamá, o tratando de detener a Banana Joe de usar pantalones, Gumball Watterson arrastra a su hermano Darwin, a su hermana Anais y al resto de la ciudad de Elmore en esta aventura. Con historias aún más locas, giros más grandes y un humor surrealista, ¡el programa es tan asombroso que tuvieron que renombrarlo!</span>
+    <span class="hidden">extrañamente maravilloso increible Bienvenido de nuevo a Elmore, donde las leyes de la realidad son una broma y la vida familiar es todo menos ordinaria. Ya sea luchando contra un imperio de comida rápida malvado, enfrentándose a una IA sensible enamorada de su mamá, o tratando de detener a Banana Joe de usar pantalones, Gumball Watterson arrastra a su hermano Darwin, a su hermana Anais y al resto de la ciudad de Elmore en esta aventura. Con historias aún más locas, giros más grandes y un humor surrealista, ¡el programa es tan asombroso que tuvieron que renombrarlo!</span>
   </a>
 </li>
 <!--FIN--><!-- Nezha: El renacer de un dios -->
@@ -91,7 +91,7 @@
    <img 
   src="https://image.tmdb.org/t/p/original/bPj2YRLOnYtY7dQCZl3hHef9PZA.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">Nezha: El renacer de un dios 2021</span>
-    <span class="hidden">La historia tiene lugar tres mil años después de "Nezha nao hai". Nezha nace de nuevo ¿Qué desafíos enfrentará en esta vida? Un nuevo superhéroe está naciendo en silencio...</span>
+    <span class="hidden">ne zha La historia tiene lugar tres mil años después de "Nezha nao hai". Nezha nace de nuevo ¿Qué desafíos enfrentará en esta vida? Un nuevo superhéroe está naciendo en silencio...</span>
   </a>
 </li>
 <!--FIN--><!-- Yo Antes de Ti -->
@@ -109,7 +109,7 @@
    <img 
   src="https://image.tmdb.org/t/p/original/1RxPBKMpHlcm5PORiPo6LHUV2ft.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">A través de tu mirada 2024</span>
-    <span class="hidden">Raquel y Ares tienen una relación a distancia. Finalmente se reencuentran durante el verano en los paisajes de la Costa Brava con sus amigos. Raquel y Ares comienzan a cuestionarse si su relación podrá resistir el paso del tiempo. Secuela de "A través del mar" (2023) y tercera película sobre Ares y Raquel.</span>
+    <span class="hidden">atraves atravez a travez de mi ventana 3 Raquel y Ares tienen una relación a distancia. Finalmente se reencuentran durante el verano en los paisajes de la Costa Brava con sus amigos. Raquel y Ares comienzan a cuestionarse si su relación podrá resistir el paso del tiempo. Secuela de "A través del mar" (2023) y tercera película sobre Ares y Raquel.</span>
   </a>
 </li>
 <!--FIN--><!-- A traves del mar -->
@@ -118,7 +118,7 @@
    <img 
   src="https://image.tmdb.org/t/p/original/hisRiTK0zCP1sXtlCSrmFRVOVlz.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">A través del mar 2023</span>
-    <span class="hidden">En A través del mar, Ares se ha ido a estudiar a Estocolmo, y él y Raquel están manteniendo una relación a distancia, lo que supone un mayor desafío de lo que ellos habían imaginado. Cuando llega el verano y se reencuentran, el periodo de separación y las nuevas personas que han conocido en ese tiempo harán que lo que creían seguro empiece a tambalearse.</span>
+    <span class="hidden">atraves atravez a travez de mi ventana 2 En A través del mar, Ares se ha ido a estudiar a Estocolmo, y él y Raquel están manteniendo una relación a distancia, lo que supone un mayor desafío de lo que ellos habían imaginado. Cuando llega el verano y se reencuentran, el periodo de separación y las nuevas personas que han conocido en ese tiempo harán que lo que creían seguro empiece a tambalearse.</span>
   </a>
 </li>
 <!--FIN--><!-- A traves de mi ventana -->
@@ -127,7 +127,7 @@
    <img 
   src="https://image.tmdb.org/t/p/original/3F5MkMadQOWiZNVaNuOuw6UaK7a.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">A través de mi ventana 2022</span>
-    <span class="hidden">Raquel lleva toda la vida loca por Ares, su atractivo y misterioso vecino. Lo observa sin ser vista y es que, muy a su pesar, no han intercambiado ni una palabra. Raquel tiene muy claro su objetivo: conseguir que Ares se enamore de ella. Pero ella no es una niña inocente y no está dispuesta a perderlo todo por el camino, y mucho menos a sí misma⬦</span>
+    <span class="hidden">atraves atravez a travez 1 Raquel lleva toda la vida loca por Ares, su atractivo y misterioso vecino. Lo observa sin ser vista y es que, muy a su pesar, no han intercambiado ni una palabra. Raquel tiene muy claro su objetivo: conseguir que Ares se enamore de ella. Pero ella no es una niña inocente y no está dispuesta a perderlo todo por el camino, y mucho menos a sí misma⬦</span>
   </a>
 </li>
 <!--FIN--><!-- Invencible: Un nino fuera de serie -->
@@ -136,7 +136,7 @@
    <img 
   src="https://image.tmdb.org/t/p/original/epEorIcbWjuLqd4dgRWYffpazIR.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">Invencible: Un niño fuera de serie 2025</span>
-    <span class="hidden">Un niño con autismo padece además una rara enfermedad de los huesos. Pero lo que le hace verdaderamente único es su visión del mundo alegre, divertida y llena de vida, que transforma y une a todos los que le rodean.</span>
+    <span class="hidden">invensible Un niño con autismo padece además una rara enfermedad de los huesos. Pero lo que le hace verdaderamente único es su visión del mundo alegre, divertida y llena de vida, que transforma y une a todos los que le rodean.</span>
   </a>
 </li>
 <!--FIN--><!-- Megamente contra el sindicato de la perdicion -->
@@ -145,7 +145,7 @@
    <img 
   src="https://image.tmdb.org/t/p/original/jf0VOTuKY2UUqK8NtXrxhtY9CVP.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">Megamente contra el sindicato de la perdición 2024</span>
-    <span class="hidden">El antiguo equipo de villanos de Megamente, El sindicato de Doom, han regresado.  Nuestro héroe cabezon azul recién coronado, ahora debe mantener apariencias malvadas hasta que pueda reunir a sus amigos para evitar que sus antiguos compañeros malvados lancen Metro City a la Luna.</span>
+    <span class="hidden">mega-min mega min megamin Megamente El antiguo equipo de villanos de Megamente, El sindicato de Doom, han regresado.  Nuestro héroe cabezon azul recién coronado, ahora debe mantener apariencias malvadas hasta que pueda reunir a sus amigos para evitar que sus antiguos compañeros malvados lancen Metro City a la Luna.</span>
   </a>
 </li>
 <!--FIN--><!-- Megamente -->
@@ -154,7 +154,7 @@
    <img 
   src="https://image.tmdb.org/t/p/original/i8YhVqSx6QlqIAHJ60vEZzpiCfe.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">Megamente 2010</span>
-    <span class="hidden">Megamente es el supervillano más brillante que el mundo haya conocido. Y el que menos éxito tiene. Durante años, ha estado intentando conquistar Metro City por todos los medios posibles. Cada intento constituye un fracaso, por culpa de Metro Man, un héroe invencible hasta que Megamente consigue matarlo...</span>
+    <span class="hidden">mega-min mega min megamin Megamente 1 es el supervillano más brillante que el mundo haya conocido. Y el que menos éxito tiene. Durante años, ha estado intentando conquistar Metro City por todos los medios posibles. Cada intento constituye un fracaso, por culpa de Metro Man, un héroe invencible hasta que Megamente consigue matarlo...</span>
   </a>
 </li>
 <!--FIN--><!-- Rockstar: DUKI desde el fin del mundo -->
@@ -172,7 +172,7 @@
    <img 
   src="https://image.tmdb.org/t/p/original/g9cyiDTw5SQhbI7SRDjBUMr14kV.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">De la nada: ¡Scooby-Doo! Conoce a Coraje, el Perro Cobarde 2021</span>
-    <span class="hidden">La comedia empieza cuando Scooby-Doo, el perro detective favorito, se une por primera vez a Coraje, el perro cobarde. La dupla canina huele algo extraño en el medio de Ningún Lugar, Kansas, hogar de Coraje y sus dueños, Justo y Muriel. Enseguida este misterioso descubrimiento los lleva al encuentro de una cigarra monstruosa gigante y su extraño ejército de bichos voladores. Fred, Vilma, Dafne y Shaggy saben bien que un matamoscas no bastará, y necesitarán la ayuda del dúo perruno para resolver el misterio. ¿Podrán Scooby y Coraje vencer sus miedos y derrotar al ejército de insectos antes de que infeste al mundo? ¡Te reto a que no estires la pata del susto!</span>
+    <span class="hidden">scoobydoo doo scooby La comedia empieza cuando Scooby-Doo, el perro detective favorito, se une por primera vez a Coraje, el perro cobarde. La dupla canina huele algo extraño en el medio de Ningún Lugar, Kansas, hogar de Coraje y sus dueños, Justo y Muriel. Enseguida este misterioso descubrimiento los lleva al encuentro de una cigarra monstruosa gigante y su extraño ejército de bichos voladores. Fred, Vilma, Dafne y Shaggy saben bien que un matamoscas no bastará, y necesitarán la ayuda del dúo perruno para resolver el misterio. ¿Podrán Scooby y Coraje vencer sus miedos y derrotar al ejército de insectos antes de que infeste al mundo? ¡Te reto a que no estires la pata del susto!</span>
   </a>
 </li>
 <!--FIN--><!-- Scooby-Doo y el fantasma de la bruja -->
@@ -181,7 +181,7 @@
    <img 
   src="https://image.tmdb.org/t/p/original/aVS9CqFgfkypqLoljg1VDHSvMmB.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">Scooby-Doo y el fantasma de la bruja 1999</span>
-    <span class="hidden">La pandilla viaja a Nueva Inglaterra al Gran Festival de la Vendimia, invitados por Ben, un famoso escritor de novelas de terror. Todo va bien hasta que descubren que el lugar está embrujado por Sarah, un mujer que perteneció a la familia de Ben en el pasado. Hay que revelar el misterio de si Sarah era una mujer de buen corazón o una bruja...</span>
+    <span class="hidden">scoobydoo La pandilla viaja a Nueva Inglaterra al Gran Festival de la Vendimia, invitados por Ben, un famoso escritor de novelas de terror. Todo va bien hasta que descubren que el lugar está embrujado por Sarah, un mujer que perteneció a la familia de Ben en el pasado. Hay que revelar el misterio de si Sarah era una mujer de buen corazón o una bruja...</span>
   </a>
 </li>
 <!--FIN-->
