--- a/Categorias/aventura/index.html
+++ b/Categorias/aventura/index.html
@@ -79,7 +79,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 
 
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Ne Zha -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Las aventuras de Winnie Pooh -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/movie16.html">
+    <img src="https://image.tmdb.org/t/p/original/nxYMMFrFiqfj4YLbOHAidRZBI3f.jpg" alt="Las aventuras de Winnie Pooh" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Las aventuras de Winnie Pooh</div>
+  <div class="text-xs text-white/70">1977</div>
+</article><!-- Ne Zha -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/movie15.html">
     <img src="https://image.tmdb.org/t/p/original/8TpbaMAjrYm2iFB3LCTcVInwhdS.jpg" alt="Ne Zha" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
