--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -31,7 +31,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Ne Zha -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Las aventuras de Winnie Pooh -->
+<li>
+  <a href="../Peliculas/movie16.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/nxYMMFrFiqfj4YLbOHAidRZBI3f.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Las aventuras de Winnie Pooh 1977</span>
+    <span class="hidden">En esta colección de cortos animados basados en las historias y personajes de A.A. Milne, Winnie the Pooh, un osito de peluche amante de la miel, se embarca en algunas aventuras excéntricas.</span>
+  </a>
+</li>
+<!--FIN--><!-- Ne Zha -->
 <li>
   <a href="../Peliculas/movie15.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
