Crear/Actualizar HOME/Buscador2.html

--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -31,7 +31,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Las aventuras de Winnie Pooh -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Winnie Pooh: su gran aventura -->
+<li>
+  <a href="../Peliculas/movie17.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/qa419JCL94R6GzS6WWiLKf4pTzi.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Winnie Pooh: su gran aventura 1997</span>
+    <span class="hidden">Winnie Pooh y compañía se embarcan en una búsqueda para rescatar a Christopher Robin de un cierto desastre en un lugar llamado «Calavera» después de haber leído mal una nota que él dejó para ellos.</span>
+  </a>
+</li>
+<!--FIN--><!-- Las aventuras de Winnie Pooh -->
 <li>
   <a href="../Peliculas/movie16.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
