--- a/Plataforma/disney/index.html
+++ b/Plataforma/disney/index.html
@@ -190,7 +190,17 @@ document.addEventListener("DOMContentLoaded", () => {
   </header>
   <main class="max-w-[1280px] mx-auto px-4 mt-24">
     <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Winnie Pooh: su gran aventura -->
+      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Mickey, Donald, Goofy: Los tres mosqueteros -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/movie18.html">
+    <img src="https://image.tmdb.org/t/p/original/5Ksryc9HHjSikRJNaX4LvBThROS.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Mickey, Donald, Goofy: Los tres mosqueteros</div>
+  <div class="text-xs text-white/70">2004</div>
+</article><!-- Winnie Pooh: su gran aventura -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/movie17.html">
     <img src="https://image.tmdb.org/t/p/original/qa419JCL94R6GzS6WWiLKf4pTzi.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
