Crear/Actualizar HOME/Buscador2.html

--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -31,7 +31,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Winnie Pooh: su gran aventura -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Mickey, Donald, Goofy: Los tres mosqueteros -->
+<li>
+  <a href="../Peliculas/movie18.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/5Ksryc9HHjSikRJNaX4LvBThROS.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Mickey, Donald, Goofy: Los tres mosqueteros 2004</span>
+    <span class="hidden">En la versión de Disney sobre el cuento de Alexander Dumas, Mickey Mouse, El pato Donald y Goofy no quieren más que realizar acciones valientes en nombre de su reina (Minnie Mouse), pero están bloqueados por el jefe Mosquetero, Pete. Pete secretamente quiere deshacerse de la reina, por lo que designa a Mickey y sus amigos torpes como guardianes de Minnie, pensando que tal maniobra asegurará el éxito de su plan. La partitura presenta canciones basadas en melodías clásicas familiares.</span>
+  </a>
+</li>
+<!--FIN--><!-- Winnie Pooh: su gran aventura -->
 <li>
   <a href="../Peliculas/movie17.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
