--- a/Categorias/animacion/index.html
+++ b/Categorias/animacion/index.html
@@ -76,7 +76,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 
 
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Mickey, Donald, Goofy: Los tres mosqueteros -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Lilo y Stitch -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/movie19.html">
+    <img src="https://image.tmdb.org/t/p/original/9jrmKyhNGam2pj89bcxmhQzXCNo.jpg" alt="Lilo y Stitch" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Lilo y Stitch</div>
+  <div class="text-xs text-white/70">2002</div>
+</article><!-- Mickey, Donald, Goofy: Los tres mosqueteros -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/movie18.html">
     <img src="https://image.tmdb.org/t/p/original/5Ksryc9HHjSikRJNaX4LvBThROS.jpg" alt="Mickey, Donald, Goofy: Los tres mosqueteros" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
