--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -31,7 +31,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Mickey, Donald, Goofy: Los tres mosqueteros -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Lilo y Stitch -->
+<li>
+  <a href="../Peliculas/movie19.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/9jrmKyhNGam2pj89bcxmhQzXCNo.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Lilo y Stitch 2002</span>
+    <span class="hidden">Una chica joven y sin padres adopta un «perro» de la perrera local, sin saber que supuestamente es un peligroso experimento científico que se ha refugiado en la Tierra y que ahora se esconde de su creador y de quienes lo ven como una amenaza.</span>
+  </a>
+</li>
+<!--FIN--><!-- Mickey, Donald, Goofy: Los tres mosqueteros -->
 <li>
   <a href="../Peliculas/movie18.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
