Crear/Actualizar HOME/Buscador2.html

--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -31,7 +31,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Leroy y Stitch -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Tierra de Osos -->
+<li>
+  <a href="../Peliculas/movie22.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/1XwOQNSby3HZfKMZcY7rtZw4KR.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Tierra de Osos 2003</span>
+    <span class="hidden">En los bosques del noroeste americano vive un niño indio llamado Kenai, cuya vida sufre un giro inesperado cuando los Grandes Espíritus lo transforman en un oso, el animal que más odia. Kenai se hace amigo de un osezno llamado Koda y se propone recuperar su forma humana. Mientras, su hermano (que no sabe que Kenai es ahora un oso) lo persigue para cumplir una misión de venganza en la que está en juego el honor familiar.</span>
+  </a>
+</li>
+<!--FIN--><!-- Leroy y Stitch -->
 <li>
   <a href="../Peliculas/movie21.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
