Crear/Actualizar HOME/Buscador2.html

--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -31,7 +31,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Tierra de Osos -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Tierra de Osos 2 -->
+<li>
+  <a href="../Peliculas/movie23.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/tHvNX0SSyCW9MyPeWK5myc9lTLS.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Tierra de Osos 2 2006</span>
+    <span class="hidden">La trama se centra de nuevo en Kenai (que había sido transformado en oso durante la primera parte) y sus aventuras en la pintoresca costa del Pacífico Norte al final de la Edad de Hielo. Kenai sueña repetidamente con su anterior vida como humano, cuando era niño y su mejor amiga era Nita, la hija del jefe de la tribu. Ahora ambos revivirán este pasado común cuando se ven obligados a embarcarse en una peligrosa aventura…</span>
+  </a>
+</li>
+<!--FIN--><!-- Tierra de Osos -->
 <li>
   <a href="../Peliculas/movie22.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
