--- a/Categorias/familia/index.html
+++ b/Categorias/familia/index.html
@@ -80,7 +80,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 
 
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Tierra de Osos 2 -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Atlantis: El imperio perdido -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/movie24.html">
+    <img src="https://image.tmdb.org/t/p/original/uR7AKWMDTwyAub5r4QoPPiJImvx.jpg" alt="Atlantis: El imperio perdido" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Atlantis: El imperio perdido</div>
+  <div class="text-xs text-white/70">2001</div>
+</article><!-- Tierra de Osos 2 -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/movie23.html">
     <img src="https://image.tmdb.org/t/p/original/tHvNX0SSyCW9MyPeWK5myc9lTLS.jpg" alt="Tierra de Osos 2" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
