--- a/Categorias/cienciaficcion/index.html
+++ b/Categorias/cienciaficcion/index.html
@@ -75,7 +75,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 </header>
 <main class="max-w-[1280px] mx-auto px-4 mt-24">
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Lilo y Stitch 2: Stitch en cortocircuito -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Atlantis: El imperio perdido -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/movie24.html">
+    <img src="https://image.tmdb.org/t/p/original/uR7AKWMDTwyAub5r4QoPPiJImvx.jpg" alt="Atlantis: El imperio perdido" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Atlantis: El imperio perdido</div>
+  <div class="text-xs text-white/70">2001</div>
+</article><!-- Lilo y Stitch 2: Stitch en cortocircuito -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/movie20.html">
     <img src="https://image.tmdb.org/t/p/original/l71VXcph19ZwJr2ZtEFuZA6ZzK5.jpg" alt="Lilo y Stitch 2: Stitch en cortocircuito" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
