--- a/Categorias/fantasia/index.html
+++ b/Categorias/fantasia/index.html
@@ -78,7 +78,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 </header>
 <main class="max-w-[1280px] mx-auto px-4 mt-24">
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Ne Zha -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Blanca Nieves y los siete enanos -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/movie25.html">
+    <img src="https://image.tmdb.org/t/p/original/b2ZPP3bZqDOzqTHr1TlFIFPWP48.jpg" alt="Blanca Nieves y los siete enanos" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Blanca Nieves y los siete enanos</div>
+  <div class="text-xs text-white/70">1938</div>
+</article><!-- Ne Zha -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/movie15.html">
     <img src="https://image.tmdb.org/t/p/original/8TpbaMAjrYm2iFB3LCTcVInwhdS.jpg" alt="Ne Zha" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
