--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -31,7 +31,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Atlantis: El imperio perdido -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Blanca Nieves y los siete enanos -->
+<li>
+  <a href="../Peliculas/movie25.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/b2ZPP3bZqDOzqTHr1TlFIFPWP48.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Blanca Nieves y los siete enanos 1938</span>
+    <span class="hidden">La historia de una joven princesa que es perseguida por su malvada madrastra. Con la ayuda de siete enanos amigables, Blancanieves vive una aventura mágica llena de valentía, amistad y el poder del amor verdadero para vencer a la oscuridad y encontrar su final feliz.</span>
+  </a>
+</li>
+<!--FIN--><!-- Atlantis: El imperio perdido -->
 <li>
   <a href="../Peliculas/movie24.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
