--- a/Categorias/comedia/index.html
+++ b/Categorias/comedia/index.html
@@ -47,7 +47,17 @@
   </header>
   <main class="max-w-[1280px] mx-auto px-4 mt-24">
     <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Leroy y Stitch -->
+      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Toy Story -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/movie26.html">
+    <img src="https://image.tmdb.org/t/p/original/y59d8PjuFSgJJN4VRS7jDoRgSM9.jpg" alt="Toy Story" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Toy Story</div>
+  <div class="text-xs text-white/70">1995</div>
+</article><!-- Leroy y Stitch -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/movie21.html">
     <img src="https://image.tmdb.org/t/p/original/1LCfRArffse3PnqkACooOHkWcry.jpg" alt="Leroy y Stitch" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
