--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -31,7 +31,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Blanca Nieves y los siete enanos -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Toy Story -->
+<li>
+  <a href="../Peliculas/movie26.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/y59d8PjuFSgJJN4VRS7jDoRgSM9.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Toy Story 1995</span>
+    <span class="hidden">Un muñeco vaquero se siente profundamente amenazado y celoso cuando una nueva figura del hombre del espacio lo suplanta como juguete principal en el cuarto de un niño.</span>
+  </a>
+</li>
+<!--FIN--><!-- Blanca Nieves y los siete enanos -->
 <li>
   <a href="../Peliculas/movie25.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
