Crear/Actualizar Categorias/familia/index.html

--- a/Categorias/familia/index.html
+++ b/Categorias/familia/index.html
@@ -80,7 +80,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 
 
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Toy Story -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Toy Story 2 -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/movie27.html">
+    <img src="https://image.tmdb.org/t/p/original/8OTDKkJv2jXg5ZHKazFxBAttKkR.jpg" alt="Toy Story 2" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Toy Story 2</div>
+  <div class="text-xs text-white/70">1999</div>
+</article><!-- Toy Story -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/movie26.html">
     <img src="https://image.tmdb.org/t/p/original/y59d8PjuFSgJJN4VRS7jDoRgSM9.jpg" alt="Toy Story" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
