Crear/Actualizar HOME/Buscador2.html

--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -31,7 +31,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Toy Story -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Toy Story 2 -->
+<li>
+  <a href="../Peliculas/movie27.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/8OTDKkJv2jXg5ZHKazFxBAttKkR.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Toy Story 2 1999</span>
+    <span class="hidden">Cuando Woody es robado por un coleccionista de juguetes, Buzz y sus amigos emprenden una misión de rescate para salvar a Woody antes de que se convierta en una propiedad de un museo de juguetes con su pandilla de redadas Jessie, el oloroso Pete y Tiro al blanco.</span>
+  </a>
+</li>
+<!--FIN--><!-- Toy Story -->
 <li>
   <a href="../Peliculas/movie26.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
