Crear/Actualizar HOME/Buscador2.html

--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -31,7 +31,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Toy Story 2 -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Toy Story 3 -->
+<li>
+  <a href="../Peliculas/movie28.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/xNMYWGov98EySsv31FVEcnMKt9q.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Toy Story 3 2010</span>
+    <span class="hidden">Los juguetes son entregados por error a una guardería en lugar del ático justo antes de que Andy se vaya a la universidad, y depende de Woody convencer a los otros juguetes de que no fueron abandonados y volver a casa.</span>
+  </a>
+</li>
+<!--FIN--><!-- Toy Story 2 -->
 <li>
   <a href="../Peliculas/movie27.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
