Crear/Actualizar HOME/Buscador2.html

--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -31,7 +31,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Toy Story 4 -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Una ninera a prueba de balas -->
+<li>
+  <a href="../Peliculas/movie30.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/s4Z4hf8L0P1fvGoQpfCFjP5oLid.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Una niñera a prueba de balas 2005</span>
+    <span class="hidden">El deshonrado SEAL de la Armada Shane Wolfe recibe una nueva tarea: proteger a los cinco niños Plummer de los enemigos de su padre recientemente fallecido, un científico del gobierno cuyo experimento de alto secreto permanece oculto en la casa de los niños.</span>
+  </a>
+</li>
+<!--FIN--><!-- Toy Story 4 -->
 <li>
   <a href="../Peliculas/movie29.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
