--- a/Categorias/movie/index.html
+++ b/Categorias/movie/index.html
@@ -75,7 +75,17 @@
 </header>
 <main class="max-w-[1280px] mx-auto px-4 mt-24">
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Una ninera a prueba de balas -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Blanca Nieves -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/movie31.html">
+    <img src="https://image.tmdb.org/t/p/original/sm91FNDF6OOKU4hT9BDW6EMoyDB.jpg" alt="Blanca Nieves" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Blanca Nieves</div>
+  <div class="text-xs text-white/70">2025</div>
+</article><!-- Una ninera a prueba de balas -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/movie30.html">
     <img src="https://image.tmdb.org/t/p/original/s4Z4hf8L0P1fvGoQpfCFjP5oLid.jpg" alt="Una niñera a prueba de balas" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
