Crear/Actualizar HOME/Buscador2.html

--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -31,7 +31,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Una ninera a prueba de balas -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Blanca Nieves -->
+<li>
+  <a href="../Peliculas/movie31.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/sm91FNDF6OOKU4hT9BDW6EMoyDB.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Blanca Nieves 2025</span>
+    <span class="hidden">Una adaptación en vivo del clásico cuento de hadas sobre una hermosa joven princesa que, mientras es acosada por una reina celosa, busca refugio en la casa de siete enanos en la campiña alemana.</span>
+  </a>
+</li>
+<!--FIN--><!-- Una ninera a prueba de balas -->
 <li>
   <a href="../Peliculas/movie30.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
