--- a/Categorias/animacion/index.html
+++ b/Categorias/animacion/index.html
@@ -76,7 +76,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 
 
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Toy Story 4 -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- El rey leon -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/movie32.html">
+    <img src="https://image.tmdb.org/t/p/original/eGfq90BF8QGCMpncF2ag0lGTgKk.jpg" alt="El rey león" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">El rey león</div>
+  <div class="text-xs text-white/70">2019</div>
+</article><!-- Toy Story 4 -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/movie29.html">
     <img src="https://image.tmdb.org/t/p/original/yF1vPDuHVrAUMX5dy1tVMbAjkEL.jpg" alt="Toy Story 4" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
