--- a/Categorias/movie/index.html
+++ b/Categorias/movie/index.html
@@ -75,7 +75,17 @@
 </header>
 <main class="max-w-[1280px] mx-auto px-4 mt-24">
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Blanca Nieves -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- El rey leon -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/movie32.html">
+    <img src="https://image.tmdb.org/t/p/original/eGfq90BF8QGCMpncF2ag0lGTgKk.jpg" alt="El rey león" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">El rey león</div>
+  <div class="text-xs text-white/70">2019</div>
+</article><!-- Blanca Nieves -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/movie31.html">
     <img src="https://image.tmdb.org/t/p/original/sm91FNDF6OOKU4hT9BDW6EMoyDB.jpg" alt="Blanca Nieves" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
