--- a/Categorias/movie/index.html
+++ b/Categorias/movie/index.html
@@ -77,6 +77,16 @@
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
 <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Mulan -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/movie34.html">
+    <img src="https://image.tmdb.org/t/p/original/towmTJ0k29quKI9IDnOZKAAtQx.jpg" alt="Mulán" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Mulán</div>
+  <div class="text-xs text-white/70">1998</div>
+</article><!-- Mulan -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/movie33.html">
     <img src="https://image.tmdb.org/t/p/original/72XYwdIugXnjHxS6upI6U0yeTBU.jpg" alt="Mulán" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
