Crear/Actualizar HOME/Buscador2.html

--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -31,7 +31,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Mulan -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- El Aprendiz de Brujo -->
+<li>
+  <a href="../Peliculas/movie35.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/uLUv1ZQxECr1tcyGqjirTc4nZtM.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">El Aprendiz de Brujo 2010</span>
+    <span class="hidden">Dave Stutler es un joven normal, hasta que el experimentado mago Balthazar Blake ve en él un talento oculto para la hechicería. Dave se convierte en el protegido renuente de Balthazar y recibe un curso intenso en el arte de la magia; pero mientras él se prepara para ayudar a su maestro a defender Manhattan de un poderoso adversario, Dave se pregunta si sobrevivirá a su entrenamiento, salvará la ciudad y encontrará a su amor verdadero.</span>
+  </a>
+</li>
+<!--FIN--><!-- Mulan -->
 <li>
   <a href="../Peliculas/movie34.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
