Crear/Actualizar HOME/Buscador2.html

--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -31,7 +31,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- El Aprendiz de Brujo -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Luca -->
+<li>
+  <a href="../Peliculas/movie36.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/pr06RihHOGE3waZQx5fs2WYUdwr.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Luca 2021</span>
+    <span class="hidden">Un joven llamado Luca Paguro experimenta un verano inolvidable con su nuevo mejor amigo, Alberto Scorfano, en un hermoso pueblo al lado del mar en la Riviera, Italiana. Sin embargo, se verían amenazados si se revela su gran secreto: ambos son monstruos marinos.</span>
+  </a>
+</li>
+<!--FIN--><!-- El Aprendiz de Brujo -->
 <li>
   <a href="../Peliculas/movie35.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
