--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -31,7 +31,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Luca -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- La pelicula de Tigger -->
+<li>
+  <a href="../Peliculas/movie37.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/zMEky5WS29EjnmeSXvSm4YATV2R.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">La película de Tigger 2000</span>
+    <span class="hidden">Tigger va en busca de su familia por el bosque de los cien acres.</span>
+  </a>
+</li>
+<!--FIN--><!-- Luca -->
 <li>
   <a href="../Peliculas/movie36.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
