Crear/Actualizar HOME/Buscador2.html

--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -31,7 +31,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- La pelicula de Tigger -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Atlantis: El Regreso de Milo -->
+<li>
+  <a href="../Peliculas/movie38.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/cGL75ElUUClVs8kpXbVcaUxmgbd.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Atlantis: El Regreso de Milo 2003</span>
+    <span class="hidden">Tres historias diferentes cobran vida en esta secuela de la exitosa aventura de Disney. Explorer Milo Thatch, su nuevo amor, la reina Kida, y el resto del equipo se están preparando para reconstruir la ciudad submarina. Pero el problema surge. Aprovechando el poder del cristal de la Atlántida, los aventureros se dispusieron a defender su reino contra las fuerzas oscuras que amenazan con la arena, el mar y la nieve.</span>
+  </a>
+</li>
+<!--FIN--><!-- La pelicula de Tigger -->
 <li>
   <a href="../Peliculas/movie37.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
