Crear/Actualizar HOME/Buscador2.html

--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -31,7 +31,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Atlantis: El Regreso de Milo -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Toy Story: Vida de lampara -->
+<li>
+  <a href="../Peliculas/movie39.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/kBIkCS3PQlHY86agofKY411jLM7.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Toy Story: Vida de lámpara 2020</span>
+    <span class="hidden">Bo Peep hace un gran regreso en Toy Story 4 de Disney y Pixar y lidera el camino en este nuevo cortometraje animado, finalmente contesta las preguntas sobre dónde estaba Bo desde la última vez que la vimos en Toy Story 2.  Cortometraje estrenado en Disney+</span>
+  </a>
+</li>
+<!--FIN--><!-- Atlantis: El Regreso de Milo -->
 <li>
   <a href="../Peliculas/movie38.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
