Crear/Actualizar HOME/Buscador2.html

--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -31,7 +31,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Toy Story Toons: Vacaciones en Hawaii -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Toy Story Toons: Pequeno Gran Buzz -->
+<li>
+  <a href="../Peliculas/movie41.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/fyLKw1MzdpBsYtZxESLf4xqSSvR.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Toy Story Toons: Pequeño Gran Buzz 2011</span>
+    <span class="hidden">Buzz Lightyear queda olvidado en un restaurante tras ser confundido con su propia versión en miniatura. Mientras el verdadero Buzz asiste a un grupo de terapia para juguetes en miniatura dentro del restaurante, sus amigos tienen que soportar a su molesto sustituto pequeño el cual no se queda quieto ni por un momento.</span>
+  </a>
+</li>
+<!--FIN--><!-- Toy Story Toons: Vacaciones en Hawaii -->
 <li>
   <a href="../Peliculas/movie40.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
