Crear/Actualizar HOME/Buscador2.html

--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -31,7 +31,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Toy Story Toons: Pequeno Gran Buzz -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Toy Story Toons: Fiesta Saurus Rex -->
+<li>
+  <a href="../Peliculas/movie42.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/6AVL53Y4o1W2zkSuP1dDrMw0KoP.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Toy Story Toons: Fiesta Saurus Rex 2012</span>
+    <span class="hidden">Los juguetes creen que Rex es un aguafiestas, pero cuando Bonnie lo lleva con ella a la hora del baño, organiza una gran fiesta de burbujas. ¡El rey de la bañera es el legendario Fiestasaurio Rex!</span>
+  </a>
+</li>
+<!--FIN--><!-- Toy Story Toons: Pequeno Gran Buzz -->
 <li>
   <a href="../Peliculas/movie41.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
